@@ -281,7 +281,7 @@ static void	DCflush_trends(ZBX_DC_TREND *trends, int *trends_num, int update_cac
 			table_name = "trends_uint";
 			break;
 		default:
-			zbx_error("Unsupported value type for trends: %d", (int)value_type);
+			zbx_error("unsupported value type for trends: %d", (int)value_type);
 			assert(0);
 	}
 
@@ -735,7 +735,7 @@ static void	DCsync_trends()
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s() trends_num:%d",
 			__function_name, cache->trends_num);
 
-	zabbix_log(LOG_LEVEL_WARNING, "Syncing trends data...");
+	zabbix_log(LOG_LEVEL_WARNING, "syncing trends data...");
 
 	LOCK_TRENDS;
 
@@ -753,7 +753,7 @@ static void	DCsync_trends()
 
 	DBcommit();
 
-	zabbix_log(LOG_LEVEL_WARNING, "Syncing trends data... done.");
+	zabbix_log(LOG_LEVEL_WARNING, "syncing trends data done");
 
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
 }
@@ -1019,7 +1019,7 @@ notsupported:
 	{
 		if (ITEM_STATUS_NOTSUPPORTED != item->status)
 		{
-			zabbix_log(LOG_LEVEL_WARNING, "Item [%s] became not supported: %s",
+			zabbix_log(LOG_LEVEL_WARNING, "item [%s] became not supported: %s",
 					zbx_host_key_string(h->itemid), h->value_orig.err);
 
 			zbx_snprintf_alloc(&sql, &sql_alloc, sql_offset, ",status=%d", (int)h->status);
@@ -1038,7 +1038,7 @@ notsupported:
 	{
 		if (ITEM_STATUS_NOTSUPPORTED == item->status)
 		{
-			zabbix_log(LOG_LEVEL_WARNING, "Item [%s] became supported", zbx_host_key_string(item->itemid));
+			zabbix_log(LOG_LEVEL_WARNING, "item [%s] became supported", zbx_host_key_string(item->itemid));
 
 			zbx_snprintf_alloc(&sql, &sql_alloc, sql_offset, ",status=%d,error=''", (int)h->status);
 		}
@@ -1101,39 +1101,44 @@ static void	DCadd_update_inventory_sql(size_t *sql_offset, DB_ITEM *item, ZBX_DC
  ******************************************************************************/
 static void	DCmass_update_items(ZBX_DC_HISTORY *history, int history_num)
 {
-	const char	*__function_name = "DCmass_update_items";
-	DB_RESULT	result;
-	DB_ROW		row;
-	DB_ITEM		item;
-	size_t		sql_offset = 0;
-	ZBX_DC_HISTORY	*h;
-	zbx_uint64_t	*ids = NULL;
-	int		ids_alloc, ids_num = 0, i;
-	unsigned char	inventory_link;
+	const char		*__function_name = "DCmass_update_items";
+	DB_RESULT		result;
+	DB_ROW			row;
+	DB_ITEM			item;
+	size_t			sql_offset = 0;
+	ZBX_DC_HISTORY		*h;
+	zbx_vector_uint64_t	ids;
+	int			i;
+	unsigned char		inventory_link;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
 
-	ids_alloc = history_num;
-	ids = zbx_malloc(ids, ids_alloc * sizeof(zbx_uint64_t));
+	zbx_vector_uint64_create(&ids);
+	zbx_vector_uint64_reserve(&ids, history_num);
 
 	for (i = 0; i < history_num; i++)
-		uint64_array_add(&ids, &ids_alloc, &ids_num, history[i].itemid, 64);
+		zbx_vector_uint64_append(&ids, history[i].itemid);
 
-	zbx_strcpy_alloc(&sql, &sql_alloc, &sql_offset,
+	zbx_vector_uint64_sort(&ids, ZBX_DEFAULT_UINT64_COMPARE_FUNC);
+
+	zbx_snprintf_alloc(&sql, &sql_alloc, &sql_offset,
 			"select i.itemid,i.status,i.lastclock,i.prevorgvalue,i.delta,i.multiplier,i.formula,"
 				"i.history,i.trends,i.lastns,i.hostid,i.inventory_link,hi.inventory_mode,i.valuemapid,"
 				"i.units,i.error"
 			" from items i"
 				" left join host_inventory hi"
 					" on hi.hostid=i.hostid"
-			" where");
-	DBadd_condition_alloc(&sql, &sql_alloc, &sql_offset, "i.itemid", ids, ids_num);
-	zbx_strcpy_alloc(&sql, &sql_alloc, &sql_offset, " order by i.itemid");
+			" where status in (%d,%d)"
+				" and",
+			ITEM_STATUS_ACTIVE, ITEM_STATUS_NOTSUPPORTED);
 
-	zbx_free(ids);
+	DBadd_condition_alloc(&sql, &sql_alloc, &sql_offset, "i.itemid", ids.values, ids.values_num);
+
+	zbx_strcpy_alloc(&sql, &sql_alloc, &sql_offset, " order by i.itemid");
 
 	result = DBselect("%s", sql);
 
+	ids.values_num = 0;	/* item ids that are not disabled and not deleted in DB */
 	sql_offset = 0;
 
 	DBbegin_multiple_update(&sql, &sql_alloc, &sql_offset);
@@ -1141,6 +1146,8 @@ static void	DCmass_update_items(ZBX_DC_HISTORY *history, int history_num)
 	while (NULL != (row = DBfetch(result)))
 	{
 		ZBX_STR2UINT64(item.itemid, row[0]);
+
+		zbx_vector_uint64_append(&ids, item.itemid);
 
 		h = NULL;
 
@@ -1196,17 +1203,8 @@ static void	DCmass_update_items(ZBX_DC_HISTORY *history, int history_num)
 		item.units = row[14];
 		item.error = row[15];
 
-		if (0 != (daemon_type & ZBX_DAEMON_TYPE_PROXY))
-		{
-			item.delta = ITEM_STORE_AS_IS;
-			h->keep_history = 1;
-			h->keep_trends = 0;
-		}
-		else
-		{
-			h->keep_history = (item.history ? 1 : 0);
-			h->keep_trends = (item.trends ? 1 : 0);
-		}
+		h->keep_history = (0 != item.history ? 1 : 0);
+		h->keep_trends = (0 != item.trends ? 1 : 0);
 
 		DCadd_update_item_sql(&sql_offset, &item, h);
 		DCadd_update_inventory_sql(&sql_offset, &item, h, inventory_link);
@@ -1214,6 +1212,15 @@ static void	DCmass_update_items(ZBX_DC_HISTORY *history, int history_num)
 		DBexecute_overflowed_sql(&sql, &sql_alloc, &sql_offset);
 	}
 	DBfree_result(result);
+
+	/* disable processing of deleted and disabled history items by setting value_null */
+	for (i = 0; i < history_num; i++)
+	{
+		if (FAIL == zbx_vector_uint64_bsearch(&ids, history[i].itemid, ZBX_DEFAULT_UINT64_COMPARE_FUNC))
+			history[i].value_null = 1;
+	}
+
+	zbx_vector_uint64_destroy(&ids);
 
 	DBend_multiple_update(&sql, &sql_alloc, &sql_offset);
 
@@ -1968,7 +1975,7 @@ int	DCsync_history(int sync_type)
 
 	if (ZBX_SYNC_FULL == sync_type)
 	{
-		zabbix_log(LOG_LEVEL_WARNING, "Syncing history data...");
+		zabbix_log(LOG_LEVEL_WARNING, "syncing history data...");
 		now = time(NULL);
 		cache->itemids_num = 0;
 	}
@@ -2154,7 +2161,7 @@ int	DCsync_history(int sync_type)
 
 		if (ZBX_SYNC_FULL == sync_type && time(NULL) - now >= 10)
 		{
-			zabbix_log(LOG_LEVEL_WARNING, "Syncing history data... " ZBX_FS_DBL "%%",
+			zabbix_log(LOG_LEVEL_WARNING, "syncing history data... " ZBX_FS_DBL "%%",
 					(double)total_num / (cache->history_num + total_num) * 100);
 			now = time(NULL);
 		}
@@ -2162,7 +2169,7 @@ int	DCsync_history(int sync_type)
 	while (--syncs > 0 || sync_type == ZBX_SYNC_FULL || (skipped_clock != 0 && skipped_clock < max_delay));
 finish:
 	if (ZBX_SYNC_FULL == sync_type)
-		zabbix_log(LOG_LEVEL_WARNING, "Syncing history data... done.");
+		zabbix_log(LOG_LEVEL_WARNING, "syncing history data done");
 
 	return total_num;
 }
@@ -2338,7 +2345,7 @@ retry:
 	{
 		if (text_len > CONFIG_TEXT_CACHE_SIZE)
 		{
-			zabbix_log(LOG_LEVEL_ERR, "Insufficient shared memory for text cache");
+			zabbix_log(LOG_LEVEL_ERR, "insufficient shared memory for text cache");
 			exit(-1);
 		}
 
@@ -2368,6 +2375,8 @@ retry:
 		f -= ZBX_HISTORY_SIZE;
 	history = &cache->history[f];
 	history->num = 1;
+	history->keep_history = 0;
+	history->keep_trends = 0;
 
 	cache->history_num++;
 
@@ -2625,7 +2634,7 @@ void	dc_add_history(zbx_uint64_t itemid, unsigned char value_type, unsigned char
 			}
 			break;
 		default:
-			zabbix_log(LOG_LEVEL_ERR, "Unknown value type [%d] for itemid [" ZBX_FS_UI64 "]",
+			zabbix_log(LOG_LEVEL_ERR, "unknown value type [%d] for itemid [" ZBX_FS_UI64 "]",
 					value_type, itemid);
 	}
 }
@@ -2656,25 +2665,25 @@ void	init_database_cache()
 			-1 == (history_text_shm_key = zbx_ftok(CONFIG_FILE, ZBX_IPC_HISTORY_TEXT_ID)) ||
 			-1 == (trend_shm_key = zbx_ftok(CONFIG_FILE, ZBX_IPC_TREND_ID)))
 	{
-		zabbix_log(LOG_LEVEL_CRIT, "Cannot create IPC keys for history and trend caches");
+		zabbix_log(LOG_LEVEL_CRIT, "cannot create IPC keys for history and trend caches");
 		exit(FAIL);
 	}
 
 	if (ZBX_MUTEX_ERROR == zbx_mutex_create_force(&cache_lock, ZBX_MUTEX_CACHE))
 	{
-		zbx_error("Unable to create mutex for history cache");
+		zbx_error("cannot create mutex for history cache");
 		exit(FAIL);
 	}
 
 	if (ZBX_MUTEX_ERROR == zbx_mutex_create_force(&trends_lock, ZBX_MUTEX_TRENDS))
 	{
-		zbx_error("Unable to create mutex for trend cache");
+		zbx_error("cannot create mutex for trend cache");
 		exit(FAIL);
 	}
 
 	if (ZBX_MUTEX_ERROR == zbx_mutex_create_force(&cache_ids_lock, ZBX_MUTEX_CACHE_IDS))
 	{
-		zbx_error("Unable to create mutex for id cache");
+		zbx_error("cannot create mutex for id cache");
 		exit(FAIL);
 	}
 
@@ -2842,7 +2851,7 @@ zbx_uint64_t	DCget_nextid(const char *table_name, int num)
 
 	if (i == ZBX_IDS_SIZE)
 	{
-		zabbix_log(LOG_LEVEL_ERR, "Insufficient shared memory for ids");
+		zabbix_log(LOG_LEVEL_ERR, "insufficient shared memory for ids");
 		exit(-1);
 	}
 
